<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="24dp"
        android:paddingTop="32dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/kayitOl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="sans-serif"
            android:text="@string/kay_t_ol"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/kayitText"
                android:layout_width="327dp"
                android:layout_height="38dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="0dp"
                android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_eget_vitae_ut_tellus_mi"
                android:textColor="@color/text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kayitOl"/>

        <EditText
            android:id="@+id/kayitAdsoyad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/textfield"
            android:drawableStart="@drawable/ic_admin"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/ad_soyad2"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/kayitText"
            tools:layout_editor_absoluteX="48dp"
            />

        <EditText
            android:id="@+id/kayitEposta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/textfield"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/e_posta"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kayitAdsoyad" />

        <EditText
            android:id="@+id/kayitsifre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/textfield"
            android:drawableStart="@drawable/password"
            android:drawableEnd="@drawable/eyes"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/ifre"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="16sp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kayitEposta" />

        <EditText
            android:id="@+id/kayitsifretekrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/textfield"
            android:drawableStart="@drawable/password"
            android:drawableEnd="@drawable/eyes"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Şifre (Tekrar)"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="16sp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kayitsifre" />

        <Button
            android:id="@+id/buttonKayitOl"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/buttonarkaplan"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/kay_t_ol"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kayitsifretekrar" />

        <ImageView
            android:id="@+id/fieldBilgi2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_driver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonKayitOl" />

        <Button
            android:id="@+id/buttonGoogleGiris"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:stateListAnimator="@null"
            android:text="@string/google_ile_giri_yap"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/button"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fieldBilgi2" />

        <TextView
            android:id="@+id/KayitOlText"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/hesab_n_var_m"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonGoogleGiris" />

        <TextView
            android:id="@+id/kayitGirisLink"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignParentBottom="true"
            android:text="@string/giri_yap2"
            android:textAlignment="textEnd"
            android:textColor="@color/button"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/KayitOlText"
            app:layout_constraintTop_toTopOf="@id/KayitOlText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>