<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="375dp"
    android:layout_height="804dp"

    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="375dp"
        android:layout_height="300dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bg_giris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContainer"
        android:layout_width="375dp"
        android:layout_height="504dp"
        android:background="@color/white"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="24dp"
        android:paddingTop="32dp"
        android:paddingBottom="24dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="300dp">

        <EditText
            android:id="@+id/girisText"
            android:layout_width="136dp"
            android:layout_height="38dp"
            android:text="Giriş Yap"
            android:textColor="@color/black"
            android:textSize="32sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="2dp" />

        <EditText
            android:id="@+id/girisEposta"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/textfield"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/e_posta"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/girisSifre"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/textfield"
            android:drawableStart="@drawable/password"
            android:drawableEnd="@drawable/eyes"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/ifre"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="200dp"
            android:checked="false"
            android:shadowColor="@color/button"
            android:text="Beni Hatırla"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonKayitOl"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="242dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/buttonarkaplan"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/kay_t_ol"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/fieldBilgi2"
            android:layout_width="327dp"
            android:layout_height="22dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="316dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_driver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonGoogleGiris"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="360dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:stateListAnimator="@null"
            android:text="@string/google_ile_giri_yap"
            android:textAlignment="center"
            android:textColor="@color/button"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/KayitOlText"
            android:layout_width="327dp"
            android:layout_height="19dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="432dp"
            android:layout_marginEnd="24dp"
            android:text="@string/hesab_n_yok_mu"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/kayitOlGirisLink"
            android:layout_width="327dp"
            android:layout_height="19dp"
            android:layout_alignParentBottom="true"
            android:onClick="goToLogin"
            android:text="Kayıt Ol"
            android:textAlignment="textEnd"
            android:textColor="@color/button"
            android:textColorLink="@color/button"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-17dp"
            tools:layout_editor_absoluteY="634dp"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>



